@@ -212,6 +212,17 @@
 
 <p><b>Захватить/нет буфер обмена в файл хранилища</b> - если включено, то, когда в буфер обмена попадает какой-то текст, он будет скопирован на файл-хранилище. Под MacOS сие работает в пределах только TEA, в других системах - на всю систему, то бишь если вы копируете что-то например в браузере, скопированный текст автоматом помещается в хранилище.</p>
 
+<p>Для форматирования помещаемого в хранилище текста можно использовать файл-шаблон под именем <i>cliptpl.txt</i>, который надо сохранить в основном каталоге конфига TEA. Пример такого файла с макросами:</p>
+
+<pre>
+---
+%date
+%time
+%s
+---
+</pre>
+
+Здесь: %s - текст из буфера обмена, %date - текущая дата, %time - текущее время.
 
 <br>
 <a name="mni_markup"></a>
